# iamsystem_python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml  tests.yml
docs/: requirements-doc.txt
docs/source/: annotation.rst  api_doc.rst  brat.rst  conf.py  fuzzy.rst  getstarted.rst  index.rst  matcher.rst  spacy.rst  stopwords.rst  tokenizer.rst
src/iamsystem/: __init__.py
src/iamsystem/brat/: adapter.py  formatter.py  util.py
src/iamsystem/fuzzy/: abbreviations.py  api.py  cache.py  exact.py  norm_fun.py  regex.py  simstring.py  spellwise.py  util.py
src/iamsystem/keywords/: api.py  collection.py  keywords.py  util.py
src/iamsystem/matcher/: annotation.py  api.py  formatter.py  matcher.py  printannot.py  strategy.py  util.py
src/iamsystem/spacy/: __init__.py  component.py  stopwords.py  token.py  tokenizer.py
src/iamsystem/stopwords/: api.py  negative.py  simple.py
src/iamsystem/tokenization/: api.py  normalize.py  span.py  token.py  tokenize.py  util.py
src/iamsystem/tree/: api.py  nodes.py  trie.py
tests/: test_annotation.py  test_brat.py  test_detect.py  test_doc.py  test_fuzzy.py  test_matcher.py  test_simstring.py  test_spacy.py  test_spellwise.py  test_stopwords.py  test_terminology.py  test_toknorm.py  test_tree.py  utils.py  utils_detector.py
